--- a/src/less/04-layouts/sidebar/desk.less
+++ b/src/less/04-layouts/sidebar/desk.less
@@ -163,3 +163,9 @@ body > .page {
     padding: 0.5rem;
   }
 }
+
+.page-footer {
+  box-sizing: border-box;
+  margin: @baseline auto;
+  max-width: @maxPageWidth;
+}
