--- a/src/less/04-layouts/sidebar/palm.less
+++ b/src/less/04-layouts/sidebar/palm.less
@@ -323,3 +323,20 @@ body.a11ynav-is-active {
   font-size: 1.2rem;
   text-align: right;
 }
+
+.page-footer {
+  border-top: 1px solid @neutral2;
+  font-size: 1.2rem;
+  margin: @baseline @gutter;
+  padding: @baseline @gutter;
+  text-align: center;
+
+  em:first-child {
+    color: @color3Lighter;
+  }
+}
+
+.sandbox-example {
+  border-left: 10px solid @color3Lighter;
+  padding: @baseline @gutter;
+}
